# order-payment-service

./: README.md  order_service.py  payment_service_http.py  payment_worker.py  pyproject.toml
order_service/: http_app.py  mq_producer.py
payment_service/: http_app.py  mq_consumer.py
